cluster/components/kubecost/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress
  namespace: kubecost
spec:
  ingressClassName: kong
  rules:
  - host: "dashboards.kubecost.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
